// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Video /> renders a fallback image correctly 1`] = `
<figure
  className="base"
  id="video"
  role="group"
>
  <picture
    className="base picture dark"
  >
    <source
      media="(min-width: 0px)"
      srcSet="/images/products/Hand_Reverence_Aromatique_Hand_Wash_500mL_large.png 2x"
    />
    <img
      alt="Fallback Image"
    />
  </picture>
  <button
    className="base external inlineStyle dark close"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Close 
    <svg
      className="base close dark icon"
      data-ref=""
      focusable="false"
      height={12}
      role="img"
      style={
        Object {
          "height": "12px",
          "width": "12px",
        }
      }
      tabIndex={-1}
      viewBox="0 0 50 50"
      width={12}
    >
      <g>
        <polygon
          className="close"
          points="50,5 45,0 25,20 5,0 0,5 20,25 0,45 5,50 25,30 45,50 50,45 30,25"
        />
      </g>
    </svg>
  </button>
</figure>
`;

exports[`<Video /> renders base component correctly 1`] = `
<figure
  className="base"
  id="video"
  role="group"
>
  <video
    autoPlay={true}
    className="video"
    controls={true}
    controlsList="nodownload"
    loop={true}
    muted={true}
    playsInline={true}
  >
    <source
      media="(min-width: 1025px)"
      src="https://player.vimeo.com/external/300219772.hd.mp4?s=981a375b08836e6d99532afaefda0b9a78fbf404&profile_id=174"
      type="video/mp4"
    />
    <source
      media="(min-width: 640px)"
      src="https://player.vimeo.com/external/300219772.hd.mp4?s=981a375b08836e6d99532afaefda0b9a78fbf404&profile_id=174"
      type="video/mp4"
    />
    <source
      media="(min-width: 0px)"
      src="https://player.vimeo.com/external/300219772.hd.mp4?s=981a375b08836e6d99532afaefda0b9a78fbf404&profile_id=174"
      type="video/mp4"
    />
  </video>
  <button
    className="base external inlineStyle dark close"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Close 
    <svg
      className="base close dark icon"
      data-ref=""
      focusable="false"
      height={12}
      role="img"
      style={
        Object {
          "height": "12px",
          "width": "12px",
        }
      }
      tabIndex={-1}
      viewBox="0 0 50 50"
      width={12}
    >
      <g>
        <polygon
          className="close"
          points="50,5 45,0 25,20 5,0 0,5 20,25 0,45 5,50 25,30 45,50 50,45 30,25"
        />
      </g>
    </svg>
  </button>
</figure>
`;
